--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "unit-test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,12 @@
   "dependencies": {
     "express": "^4.17.1",
     "pg": "^7.17.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^7.0.1",
+    "should": "^13.2.3",
+    "supertest": "^4.0.2"
   }
 }
